river.css
html, body {
	height: 100%;
}

body {
	cursor: default;

	display: -webkit-flex;
	display: flex;

	-webkit-flex-direction: column;
	flex-direction: column;

	font-family: sans-serif;
	margin: 0;

	-webkit-user-select: none;
	user-select: none;
}

body, .search {
	font-size: 16px;
}

.search {
	border: none;
	display: block;
	outline: none;
	z-index: 1;
}

.search, .control {
	box-shadow: 0 0 10px #ccc;
}

.search, .song, .control {
	padding: 10px;
}

.songs {
	background: #eee;

	-webkit-flex: 1;
	flex: 1;

	overflow-y: auto;
}

.song {
	background: white;
}

.song:not(:first-child) {
	margin-top: 2px;
}

.songs.searching > :not(.match) {
	display: none;
}

.tag:not(.title) {
	color: grey;
	font-size: 14px;
}

.title {
	color: black;
	font-weight: bold;
}

.control:not(.loading) {
	cursor: pointer;
}

.control:not(.loading):not(.playing):not(.paused) {
	display: none;
}

.control.loading {
	background: #f5c9c9;
	animation: pulse 1s ease infinite;
}

@keyframes pulse {
	0% {
		background: white;
	}
	50% {
		background: #eee;
	}
	100% {
		background: white;
	}
}

.control.paused:not(.loading) {
	background: #eee;
}

